client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.scss
.projects-listing {
  width: inherit;
  flex-grow: 1;
  th {
    color: #484848;
  }
  th,
  td {
    font-size: 16px;
  }
  /* title */
  th:nth-child(1),
  td:nth-child(1) {
    width: 100%;
  }
  /* owner */
  th:nth-child(2),
  td:nth-child(2) {
    min-width: 15em;
  }
  /* id */
  th:nth-child(3),
  td:nth-child(3) {
    width: 5em;
  }
}

